# mcp-github-pr-issue-analyser

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  github_integration.py  glama.json  ip_integration.py  issues_pr_analyser.py  pyproject.toml  requirements.txt  setup.py  smithery.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  ghcr-cleanup.yml  tag_release.yml
deployment/: kustomization.yml
deployment/base/: deployment.yml  kustomization.yml  sa.yml  service.yml
src/: github_integration.py
src/mcp_github/: __init__.py  auth.py  exceptions.py  github_integration.py  graphql_client.py  graphql_queries.py  ip_integration.py  issues_pr_analyser.py  metrics_integration.py
src/mcp_github/skills/ip-lookup/: SKILL.md
src/mcp_github/skills/issue-management/: SKILL.md
src/mcp_github/skills/pr-analysis/: SKILL.md
src/mcp_github/skills/pr-management/: SKILL.md
src/mcp_github/skills/pr-review/: SKILL.md
src/mcp_github/skills/release-management/: SKILL.md
src/mcp_github/skills/user-activity/: SKILL.md
tests/: __init__.py  test_auth.py  test_github_integration.py
