[project]
name = "mcp-github-pr-issue-analyser"
dynamic = ["version"]
description = "MCP GitHub Issues Create/Update and PR Analyse"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "saidsef" }
]
dependencies = [
    "fastmcp[apps]>=3.2.4",
    "httpx>=0.28.1",
]

[project.scripts]
mcp-github-pr-issue-analyser = "mcp_github.issues_pr_analyser:main"

[project.urls]
homepage = "https://github.com/saidsef/mcp-github-pr-issue-analyser"
issues = "https://github.com/saidsef/mcp-github-pr-issue-analyser/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/mcp_github/_version.py"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "uv>=0.11.7",
]
