[project]
name = "mcp-github-pr-issue-analyser"
dynamic = ["version"]
description = "MCP GitHub Issues Create/Update and PR Analyse"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "saidsef" }
]
dependencies = [
    "fastmcp[apps]>=3.2.4",
    "httpx>=0.28.1",
]

[project.scripts]
mcp-github-pr-issue-analyser = "mcp_github.issues_pr_analyser:main"

[project.urls]
homepage = "https://github.com/saidsef/mcp-github-pr-issue-analyser"
issues = "https://github.com/saidsef/mcp-github-pr-issue-analyser/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/mcp_github/_version.py"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "uv>=0.11.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D", "PLR", "E", "F", "I", "N", "W", "ANN", "ASYNC", "B", "C4", "DTZ", "ICN", "PIE", "RET", "SLF", "T20", "UP", "YTT"]
ignore = [
    "ANN101",   # Missing type annotation for self in method
    "ANN102",   # Missing type annotation for cls in classmethod
    "ANN202",   # Missing return type annotation for private function
    "ANN204",   # Missing return type annotation for special method __init__
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ANN201",   # Missing return type annotation for public function
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D203",     # 1 blank line required before class docstring — conflicts with D211
    "D211",     # No blank lines allowed before class docstring — conflicts with D203
    "D212",     # Multi-line docstring summary should start at first line — conflicts with D213
    "D213",     # Multi-line docstring summary should start at second line — conflicts with D212
    "D107",     # Missing docstring in __init__
    "D105",     # Missing docstring in magic method
    "D102",     # Missing docstring in public method
    "D209",     # Multi-line docstring closing quotes should be on a separate line
    "D400",     # First line should end with a period (module docstring)
    "D401",     # First line of docstring should be in imperative mood
    "D415",     # First line should end with punctuation (module docstring)
    "D205",     # 1 blank line required between summary line and description
    "D407",     # Missing period after decorated function name
    "D408",     # Inconsistent period after section header
    "D409",     # Missing period after section header
    "D410",     # Missing blank line after section
    "D411",     # Missing blank line before section
    "D413",     # Missing blank line after last section
    "D202",     # No blank lines allowed after function docstring
    "E501",     # Line too long
    "PLR0913",  # Too many arguments in function definition
    "PLR2004",  # Magic value used in comparison
    "RET504",   # Unnecessary assignment before return
    "RET505",   # Unnecessary else after return
    "RET506",   # Unnecessary elif after raise
    "SLF001",   # Private member accessed
    "B006",     # Do not use mutable data structures for argument defaults
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "D417",     # Missing argument description in docstring
    "N814",     # CamelCase imported as constant
]
fixable = ["I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/mcp_github/__init__.py" = ["D100"]


